@@ -20,6 +20,7 @@ src/ui-properties.cc
 src/gtk_image_animation.cc
 src/ui-popup.cc
 src/GNOME_gnubiffApplet.xml
+src/GNOME_gnubiffApplet.server.in
 ui/applet-gtk.glade
 ui/applet-gnome.glade
 ui/preferences.glade
