@@ -22,8 +22,8 @@
                 <item value="IDL:Bonobo/Control:1.0"/>
                 <item value="IDL:Bonobo/Unknown:1.0"/>
         </oaf_attribute>
-        <oaf_attribute name="name" type="string" value="gnubiff"/>
-        <oaf_attribute name="description" type="string" value="Mail notification program"/>
+        <oaf_attribute name="name" type="string" _value="gnubiff"/>
+        <oaf_attribute name="description" type="string" _value="Mail notification program"/>
         <oaf_attribute name="panel:category" type="string" value="Internet"/>
         <oaf_attribute name="panel:icon" type="string" value="gnubiff.png"/>
  
